workspace(name = "cpp")

load("//tools:github.bzl", "github_archive")
load("//tools:bitbucket.bzl", "bitbucket_archive")

bitbucket_archive(
    name = "eigen",
    repository = "eigen/eigen",
    commit = "3.3.3",
    sha256 = "94878cbfa27b0d0fbc64c00d4aafa137f678d5315ae62ba4aecddbd4269ae75f",  # noqa
    strip_prefix = "eigen-eigen-67e894c6cd8f",
    build_file = "@cpp//tools:eigen.BUILD.bazel",
)

github_archive(
    name = "gtest",
    repository = "google/googletest",
    commit = "release-1.8.0",
    sha256 = "58a6f4277ca2bc8565222b3bbd58a177609e9c488e8a72649359ba51450db7d8",  # noqa
    build_file = "@cpp//tools:gtest.BUILD.bazel",
)

# Hack in VTK
load("//tools:vtk.bzl", "vtk_repository")
vtk_repository(
    name = "vtk",
)

github_archive(
    name = "fmt",
    repository = "fmtlib/fmt",
    commit = "4.1.0",
    sha256 = "46628a2f068d0e33c716be0ed9dcae4370242df135aed663a180b9fd8e36733d",  # noqa
    build_file = "@cpp//tools:fmt.BUILD.bazel",
)
