workspace(name = "cpp")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "drake",
    urls = ["https://github.com/RobotLocomotion/drake/archive/v1.13.0.tar.gz"],
    sha256 = "6fec96a7ffeab586754f1721d21380519edfab2a8a6d2f045d6b92bd30fae6be",
    strip_prefix = "drake-1.13.0",
)

load("@drake//tools/workspace:default.bzl", "add_default_workspace")
add_default_workspace()
