load(":defs.bzl", "extract_cc_object_files")

cc_library(
    name = "lib_1",
    srcs = ["lib.cc"],
)

extract_cc_object_files(
    name = "lib_1_object_files",
    deps = [":lib_1"],
)

filegroup(
    name = "data",
    # just so we trigger build
    srcs = [":lib_1"],
)

cc_library(
    name = "lib_2_via_recompile",
    srcs = ["lib.cc"],
    data = [":data"],
)

cc_binary(
    name = "main_via_recompile",
    deps = [":lib_2_via_recompile"],
    srcs = ["main.cc"],
)

cc_library(
    name = "lib_2_via_object_files",
    srcs = [":lib_1_object_files"],
    data = [":data"],
)

cc_binary(
    name = "main_via_object_files",
    deps = [":lib_2_via_object_files"],
    srcs = ["main.cc"],
)
