package(default_visibility = ["//visibility:public"])

load(":test.bzl", "execute", "recursive_filegroup")

filegroup(
    name = "files",
    srcs = ["a.txt"],
    data = ["//sub:files"],
)

sh_test(
    name = "print",
    srcs = ["echo.sh"],
    args = ["$(locations :files)"],
    data = [":files"],
)

execute(
    name = "print_execute",
    # The location will be expanded to "pkg/data.txt", and it will reference
    # the data.txt file in runfiles when this target is invoked as
    # "bazel run //pkg:e".
    command = "./echo.sh $(locations :files)",
    data = ["echo.sh", ":files"]
)

recursive_filegroup(
    name = "files_recurse",
    data = [":files"],
)

sh_test(
    name = "print_recurse",
    srcs = ["echo.sh"],
    args = ["$(locations :files_recurse)"],
    data = [":files_recurse"],
)
