load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@pip_deps//:requirements.bzl", pip = "requirement")

compile_pip_requirements(
    name = "requirements",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
    tags = ["manual"],
)

py_binary(
    name = "bin/rerun",
    srcs = ["bin/rerun.py"],
    deps = [
        pip("rerun-sdk"),
    ],
)

py_binary(
    name = "example",
    srcs = ["example.py"],
    data = [":bin/rerun"],
    deps = [
        pip("rerun-sdk"),
        "@bazel_tools//tools/python/runfiles"
    ],
)

py_binary(
    name = "example_workaround",
    main = "example.py",
    srcs = ["example.py"],
    deps = [
        ":example",
        "@pip_deps_rerun_sdk//:fix_imports",
    ],
)
