workspace(name = "rules_python_rerun")

# Copied from docs.

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Update the SHA and VERSION to the lastest version available here:
# https://github.com/bazelbuild/rules_python/releases.

SHA="778aaeab3e6cfd56d681c89f5c10d7ad6bf8d2f1a72de9de55b23081b2d31618"

VERSION="0.34.0"

http_archive(
    name = "rules_python",
    sha256 = SHA,
    strip_prefix = "rules_python-{}".format(VERSION),
    url = "https://github.com/bazelbuild/rules_python/releases/download/{}/rules_python-{}.tar.gz".format(VERSION,VERSION),
)

load("@rules_python//python:repositories.bzl", "py_repositories")

py_repositories()

load("@rules_python//python:pip.bzl", "package_annotation", "pip_parse")

_RERUN_BUILD_EXTRA = """
py_library(
    name = "fix_imports",
    imports = ["site-packages/rerun_sdk"],
)
"""

# Create a central repo that knows about the dependencies needed from
# requirements_lock.txt.
pip_parse(
    name = "pip_deps",
    requirements_lock = "//:requirements.txt",
    annotations = {
        "rerun-sdk": package_annotation(
            additive_build_content = _RERUN_BUILD_EXTRA,
        ),
    },
)
# Load the starlark macro, which will define your dependencies.
load("@pip_deps//:requirements.bzl", "install_deps")
# Call it to define repos for your requirements.
install_deps()
