load(":cc_shared.bzl", "cc_shared_library")

cc_shared_library(
    name = "example_lib_cc",
    hdrs = ["example_shared.h"],
    srcs = ["example_shared.cc"],
)

cc_test(
    name = "example_cc",
    srcs = ["example.cc"],
    deps = [":example_lib_cc"],
)

cc_shared_library(
    name = "secondary_direct_lib_cc",
    srcs = [":example_lib_cc.solib"],
)

cc_shared_library(
    name = "secondary_indirect_lib_cc",
    deps = [":example_lib_cc"],
)

sh_test(
    name = "example_ldd",
    data = [
        ":example_cc",
        ":example_lib_cc.solib",
        ":secondary_direct_lib_cc.solib",
        ":secondary_indirect_lib_cc.solib",
    ],
    srcs = ["example_ldd.sh"],
)
