load(":cc_shared.bzl", "cc_shared_library")

cc_shared_library(
    name = "example_lib_cc",
    hdrs = ["example_shared.h"],
    srcs = ["example_shared.cc"],
)

cc_test(
    name = "example_cc_indirect",
    srcs = ["example.cc"],
    deps = [":example_lib_cc"],
)

cc_test(
    name = "example_cc_direct",
    srcs = [
        "example.cc",
        "example_shared.h",
        ":example_lib_cc.solib",
    ],
)

sh_test(
    name = "example_ldd",
    data = [
        ":example_cc_indirect",
        ":example_cc_direct",
    ],
    srcs = ["example_ldd.sh"],
)
