cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "coeffwise",
    srcs = ["coeffwise.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "const_ref_ambiguity",
    srcs = ["const_ref_ambiguity.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "eigen_bug279_followup",
    srcs = ["eigen_bug279_followup.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "autodiff_nth_order",
    srcs = ["autodiff_nth_order.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "autodiff_mod",
    srcs = ["autodiff_mod.cc", "AutoDiffScalarMod.h"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "matrix_inheritance",
    srcs = ["matrix_inheritance.cc", "//cpp:name_trait.h"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "matrix_stack",
    srcs = ["matrix_stack.cc"],
    deps = [
        "//cpp:name_trait",
        "@eigen//:eigen",
    ],
)

cc_binary(
    name = "matrix_stack_xpr_tpl",
    srcs = ["matrix_stack_xpr_tpl.cc", "//cpp:name_trait.h"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "matrix_block",
    srcs = ["matrix_block.cc", "//cpp:name_trait.h"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "matrix_hstack_vstack_xpr_tpl",
    srcs = ["matrix_hstack_vstack_xpr_tpl.cc", "//cpp:name_trait.h", "//cpp:tuple_iter.h"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "matrix_hstack_vstack_xpr_tpl_cxx11",
    srcs = ["matrix_hstack_vstack_xpr_tpl_cxx11.cc", "//cpp:name_trait.h", "//cpp:tuple_iter.h"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "matrix_array_affinity",
    srcs = ["matrix_array_affinity.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "matrix_tpl_determine",
    srcs = ["matrix_tpl_determine.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "unary_example",
    srcs = ["unary_example.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "unary_view_mutable",
    srcs = ["unary_view_mutable.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "colwise_check",
    srcs = ["colwise_check.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "iterator",
    srcs = ["iterator.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "ref_check",
    srcs = ["ref_check.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "map_ref",
    srcs = ["map_ref.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "eigenvalue_ordering",
    srcs = ["eigenvalue_ordering.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "map_ref_copy",
    srcs = ["map_ref_copy.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "placement_new",
    srcs = ["placement_new.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "linspace",
    srcs = ["linspace.cc"],
    deps = ["@eigen//:eigen"],
)

cc_binary(
    name = "mutable_ref_of_row",
    srcs = ["mutable_ref_of_row.cc"],
    deps = ["@eigen//:eigen"],
)
