[tool.poetry]
name = "control-other"
version = "0.1.0"
description = ""
authors = ["Eric Cousineau <eric.cousineau@tri.global>"]
readme = "README.md"
packages = [{include = "tsid_control"}]

[tool.poetry.dependencies]
python = "^3.10"
tsid = "^1.6.2.1"
drake = "^1.15.0"
jupyterlab = "^3.6.3"
pin = "^2.6.18"
mujoco = "^2.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
