load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "module_py",
    srcs = ["__init__.py"],
    imports = [".."],
)

py_library(
    name = "multibody_extras_py",
    srcs = ["multibody_extras.py"],
    deps = [
        "@drake//bindings/pydrake",
    ],
)

py_library(
    name = "multibody_plant_subgraph_py",
    srcs = ["multibody_plant_subgraph.py"],
    deps = [
        ":multibody_extras_py",
        "@drake//bindings/pydrake",
    ],
)

py_test(
    name = "multibody_plant_subgraph_test",
    srcs = [
        "test/multibody_plant_subgraph_test.py",
        "test/multibody_plant_subgraph_test_helpers.py",
    ],
    deps = [":multibody_plant_subgraph_py"],
)

# WARNING: This does not yet work.
py_binary(
    name = "generate_poses_sink_clutter",
    srcs = ["multibody_plant_subgraph_test.py"],
    deps = ["@drake//bindings/pydrake"],
)

# WARNING: This does not yet work.
py_library(
    name = "multibody_plant_energy_hacks_py",
    srcs = ["multibody_plant_energy_hacks.py"],
    deps = ["@drake//bindings/pydrake"],
)
