load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "module_py",
    srcs = ["__init__.py"],
    imports = [".."],
)

py_library(
    name = "cc_py",
    srcs = ["cc.py"],
    deps = [
        ":module_py",
        "@drake//bindings/pydrake",
    ],
)

py_library(
    name = "containers_py",
    srcs = ["containers.py"],
    deps = [
        ":module_py",
        "@drake//bindings/pydrake",
    ],
)

py_library(
    name = "debug_py",
    srcs = ["debug.py"],
    deps = [
        ":module_py",
    ],
)

py_library(
    name = "primitive_systems_py",
    srcs = ["primitive_systems.py"],
    deps = [
        ":module_py",
        "@drake//bindings/pydrake",
    ],
)

py_library(
    name = "function_system_py",
    srcs = ["function_system.py"],
    deps = [
        ":module_py",
        ":primitive_systems_py",
        "@drake//bindings/pydrake",
    ],
)

py_library(
    name = "multibody_extras_py",
    srcs = ["multibody_extras.py"],
    deps = [
        ":cc_py",
        ":containers_py",
        ":module_py",
        "@drake//bindings/pydrake",
    ],
)

py_library(
    name = "multibody_plant_subgraph_py",
    srcs = ["multibody_plant_subgraph.py"],
    deps = [
        ":containers_py",
        ":module_py",
        ":multibody_extras_py",
        "@drake//bindings/pydrake",
    ],
)

py_test(
    name = "multibody_plant_subgraph_test",
    srcs = [
        "test/multibody_plant_subgraph_test.py",
        "test/multibody_plant_subgraph_test_helpers.py",
    ],
    deps = [
        ":debug_py",
        ":function_system_py",
        ":multibody_plant_subgraph_py",
    ],
)

# WARNING: This does not yet work.
py_binary(
    name = "generate_poses_sink_clutter",
    srcs = ["generate_poses_sink_clutter.py"],
    deps = ["@drake//bindings/pydrake"],
)

# WARNING: This does not yet work.
py_library(
    name = "multibody_plant_energy_hacks_py",
    srcs = ["multibody_plant_energy_hacks.py"],
    deps = ["@drake//bindings/pydrake"],
)
